--- a/index.html
+++ b/index.html
@@ -26,22 +26,24 @@
               <i class="fa fa-bars"></i>
             </a>
         </div>
-
         <div class="content">
             <div class="element left">
-                <marquee width="500%" height="500%" direction="up" scrollamount="100">
-            <img id="profile-picture" src="images/cryne.jpg"> </marquee>
+                <marquee width="500%" height="500%" direction="up" scrollamount="15">
+            <img id="profile-picture" src="images/ok.jpg"
+            width="400"
+            height="200">
+        </marquee>
             </div>
             <div class="element center">
                 <h2 style="text-align: center;">Mit navn er Gregers, jeg går i 1.s på Slotshaven Gymnasium. I min fritid laver jeg musik, spiller computer eller hvad andet jeg kan finde på.</h2> </div>
                 <div class="element right">
-            <marquee width="500%" height="500%" direction="up" scrollamount="100">
+            <marquee width="500%" height="500%" direction="up" scrollamount="30">
                 <img id="profile-picture" src="images/cryne.jpg"> </marquee> </div>
 
             </div>
-            <marquee scrollamount="100">
+            <marquee scrollamount="50">
             <img src="images/dave.jpg" 
-            width="600"
+            width="500"
             height="200"
             id="profile-picture" src="images/dave.jpg" > </marquee>
         </div>
