--- a/informatik.html
+++ b/informatik.html
@@ -3,7 +3,7 @@
     <head>
         <title>Greeks Logbog</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
         <link rel="stylesheet" href="style.css"></link>
     </head>
     <body>
@@ -29,41 +29,38 @@
                 <div class="panel">
                 <p>
                     Bruteforce
-                    <p>
-                    </p>
+<br>
                     Som navnet angiver, bruteforce er når man bare prøver en masse koder af indtil man får den rigtige.
-                    <p>
-                    </p>
+                    <br><br>
                     Social engineering
+                    <br>
                     Når man udnytter menneskelige svagheder til at narre nogen som har værdifuld information, til at oplyse det eller gøre det offentligt.
-                    <p>
-                    </p>
+                    <br><br>
                     Phishing
+                    <br>
                     Når man sender et link eller lignende til ens e-mail eller lignende som kan give hackeren adgang til personlig information.
-                    <p>
-                    </p>
+                    <br><br>
                     Trojan Horse
+                    <br>
                     Et program som skjuler sig som et hjælpsomt værktøj til at løse et problem, men i virkeligheden er malware eller noget andet skadeligt for ens computer.
-                    <p>
-                    </p>
+                    <br><br>
                     Ransomware
+                    <br>
                     Et program der tager ens data som “gidsel” som man kun kan få tilbage ved at sende penge til en konto.
-                    <p>
-                    </p>
+                    <br><br>
                     Buffer overflow
+                    <br>
                     Når et program sætter mere data ind i en buffer end den kan holde til.
-                    <p>
-                    </p>
+                    <br><br>
                     SQL Injection
+                    <br>
                     SQL står for structured query language. En SQL injection opstår når man indsætter kode ind i et login vindue som kan give adgang til data fra websiden, hvis webprogrammøren ikke har sørget for at det ikke kan ske.
-                    <p>
-                    </p>
+                    <br><br>
                     Worm
+                    <br>
                     En worm er en selvstændig virus som selv kan sprede sig fra computer til computer.
-                    <p>
-                    </p>
+                    <br><br>
                     En virus er det samme, men kan ikke selv sprede sig fra computer til computer.
-                    </p>
                 </div>
 
                 <button class="accordion">Trusselmodeller</button>
@@ -96,17 +93,66 @@
                 </p>
                 Vi har brainstormet og har besluttet os om vores produkt. </p>
                 </div>
-                <button class="accordion">bruh?</button>
+                <button class="accordion">Arrays</button>
                 <div class="panel">
-                <p>BRUH.</p>
+                <p>En array er en variable, som kan indeholde flere værdier. Arrays kan være hjælpsomme hvis du har mange forskellige ting du vil have i variabler,
+                     så du ikke ender med en lang lang liste af variabler.
+                     <p></p>
+                    Arrays skrives ofte med et "const" keyword, et eksempel med biler kunne være
+                    <p></p>
+                    const cars = [
+                    <p></p>
+  "Saab",
+  <p></p>
+  "Volvo",
+  <p></p>
+  "BMW"
+  <p></p>
+];
+<p></p>
+                    Bagefter kan du så sætte værdierne ind
+                    <p></p>
+                    const cars = [];
+                    <p></p>
+cars[0]= "Saab";
+<p></p>
+cars[1]= "Volvo";
+<p></p>
+cars[2]= "BMW";
+<p></p>
+                </p>
             </div>
 
-            <button class="accordion">ez?</button>
+            <button class="accordion">Loops</button>
                 <div class="panel">
-                <p>ok</p>
+                <p>The while loop
+<br>
+                    Den meste simple form for loop i programmering. Den lader en "loope" noget.
+                    <br><br>
+                    Syntax:
+                    <br>
+                    while (condition) {
+                        <br>
+                    //  code block to be executed
+                       <br>
+                    }
+                    <br><br>
+                    Eksempel:
+                    <br>
+                    while (i < 10) {
+                     <br>
+                      text += "The number is " + i;
+                      <br>
+                      i++;
+                      <br>
+                    }
+                    <br><br>
+                    "while (i < 10)" betyder at i skal være mindre end 10 for at koden skal virke.
+                    <br><br>
+                    Hvis man kører den uden "i++;" vil koden køre i uendelighed, og det er en nem måde at crashe ens program</p>
                 </div>
 
-            <div class="element left">
+                <div class="element left">
                 <h2>Informatik Grundforløb</h2>
                 <button class="accordion">Mass Surveillance</button>
                 <div class="panel">
@@ -132,25 +178,6 @@
                     <p></p>
                     Øvelse: Diskuter videoerne i grupper eller i plenum. Hvad er fordele og ulemper ved surveillance capitalism og hvordan vil vi hver især bruge vores rettigheder?</p>
                 </div>
-
-                <button class="accordion">Section 3</button>
-                <div class="panel">
-                <p></p>
-                </div>
-
-                <button class="accordion">Section 3</button>
-                <div class="panel">
-                <p></p>
-                </div>
-
-                <button class="accordion">Section 3</button>
-                <div class="panel">
-                <p></p>
-                </div>
-
-                <button class="accordion">Section 3</button>
-                <div class="panel">
-                <p></p>
                 </div>
             </div>
 
