--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Kaj Børges Logbog</title>
+        <title>Greeks Logbog</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css"></link>
@@ -20,36 +20,38 @@
             <a href="matematik.html">MAT</a>
             <a href="dansk.html">DAN</a>
             <a href="engelsk.html">ENG</a>
-            <a href="dotdotdot.html">...</a>
+            <a href="dotdotdot.html">FYS</a>
             <a href="so.html">SO</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a>
-        </div>
+
+          </div>
         <div class="content">
+            <div class="element right">
+            </div>
             <div class="element left">
-                <marquee width="500%" height="500%" direction="up" scrollamount="15">
-            <img id="profile-picture" src="images/ok.jpg"
-            width="400"
-            height="200">
-        </marquee>
+                <h2 style="text-align: left;">
+    Mit navn er Gregers, jeg bliver ofte kaldt Greek, jeg går i 1.s på Slotshaven Gymnasium. 
+    I min fritid laver jeg musik på min computer, spiller på min computer, prøver at lære guitar, eller hvad end jeg ellers kan finde på at lave.
+            </h2> 
             </div>
-            <div class="element center">
-                <h2 style="text-align: center;">Mit navn er Gregers, jeg går i 1.s på Slotshaven Gymnasium. I min fritid laver jeg musik, spiller computer eller hvad andet jeg kan finde på.</h2> </div>
-                <div class="element right">
-            <marquee width="500%" height="500%" direction="up" scrollamount="30">
-                <img id="profile-picture" src="images/cryne.jpg"> </marquee> </div>
 
-            </div>
-            <marquee scrollamount="50">
-            <img src="images/dave.jpg" 
-            width="500"
-            height="200"
-            id="profile-picture" src="images/dave.jpg" > </marquee>
-        </div>
-        <div>
-        
+            <div class="element h3">
+                <h3>
+    Her er et fuldstændig urelateret billede af mig ved nogle fysik noter. 
+                <h3>
+</div>
+            <iframe src="https://open.spotify.com/embed/track/5m7K3QLkYeA1e1LhI9QnES?utm_source=generator&theme=0" width="20%" height="80" style="vertical-align:right;" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+            </iframe>
 
-        <script src="script.js"></script>
+            <h4>
+    Her er noget musik jeg har produceret hvis du havde lyst til at høre det.
+    Det er lavet sammen med en amerikansk kunster der hedder "alky".
+            </h4>
+
+            <img src="images/nice.jpeg" alt="Mig i fysik" width="409.6" height="307.2" style="vertical-align:bottom">
+
+        <script> src="script.js"</script>
     </body>
 </html>
