--- a/informatik.html
+++ b/informatik.html
@@ -67,21 +67,21 @@
                 <div class="panel">
                 <p>
                     Email
-                    <p>
-                    </p>
+                    <br><br>
                     Hvem beskytter vi imod?
+                    <br>
                     Skumle personer som sidder i mors kælder og keder sig
-                    <p>
-                    </p>
+                    <br><br>
                     Hvad beskytter vi?
+                    <br>
                     Konto information til hjemmesider, personlige oplysninger, vigtige dokumenter, hemmelige dokumenter hvis du arbejder som noget vigtigt m.m
-                    <p>
-                    </p>
+                    <br><br>
                     Hvordan beskytter vi?
+                    <br>
                     Password, 2fa
-                    <p>
-                    </p>
+                    <br><br>
                     Hvilke trusler beskytter vi imod?
+                    <br>
                     Stjålet information, tyveri, svindleri m.m
                     </p>
                 </div>
@@ -89,40 +89,39 @@
                 <button class="accordion">Assess</button>
                 <div class="panel">
                 <p>26-11-2021 
-                <p>
+                <br>
+                Vi har brainstormet og har besluttet os om vores produkt. 
                 </p>
-                Vi har brainstormet og har besluttet os om vores produkt. </p>
                 </div>
                 <button class="accordion">Arrays</button>
                 <div class="panel">
                 <p>En array er en variable, som kan indeholde flere værdier. Arrays kan være hjælpsomme hvis du har mange forskellige ting du vil have i variabler,
                      så du ikke ender med en lang lang liste af variabler.
-                     <p></p>
+                     <br><br>
                     Arrays skrives ofte med et "const" keyword, et eksempel med biler kunne være
-                    <p></p>
+                    <br><br>
                     const cars = [
-                    <p></p>
+                    <br>
   "Saab",
-  <p></p>
+  <br>
   "Volvo",
-  <p></p>
+  <br>
   "BMW"
-  <p></p>
+  <br>
 ];
-<p></p>
+<br><br>
                     Bagefter kan du så sætte værdierne ind
-                    <p></p>
+                    <br><br>
                     const cars = [];
-                    <p></p>
+                    <br>
 cars[0]= "Saab";
-<p></p>
+<br>
 cars[1]= "Volvo";
-<p></p>
+<br>
 cars[2]= "BMW";
-<p></p>
+<br>
                 </p>
             </div>
-
             <button class="accordion">Loops</button>
                 <div class="panel">
                 <p>The while loop
@@ -158,30 +157,24 @@ cars[2]= "BMW";
                 <div class="panel">
                 <p>
                     Mål: Forstå at masseovervågning er muligt i en gennem-digitaliseret verden og kunne reflektere de følgende etiske dilemmaer. På den ene side kan overvågning bruges til at forhindre måske terror og kriminalitet, men på den anden side kan den bruges til at frarøve folk deres frihed og undertrykke politiske modstandere.
-                <p></p>
+                    <br><br>
                     “Arguing that you don't care about the right to privacy because you have nothing to hide is no different than saying you don't care about free speech because you have nothing to say.” - Edward Snowden
-                    <p></p>
+                    <br><br>
                     https://www.youtube.com/watch?v=ucRWyGKBVzo
-                    <p></p>
-                    <p></p>
+                    <br><br>
                     Øvelse: Diskuter videoerne i grupper eller i plenum. Hvad er fordele og ulemper ved overvågning?</p>
                 </div>
 
                 <button class="accordion">Surveillance Capitalism</button>
                 <div class="panel">
                 <p>Mål: Forstå at data er et af vore tids mest værdifulde råstoffer og at det kan bruges til at udvikle gode services, men også til underbevidst at manipulere f.eks. vores forbrugsvaner og politiske holdninger. Kende til rettighederne som givet af GDPR.
-<p></p>
+                    <br><br>
                     https://medium.com/swlh/what-is-surveillance-capitalism-bd7c24d8ddba
-                    <p></p>
+                    <br><br>
                     - GDPR: https://www.youtube.com/watch?v=kLFFnAONHvU
-                    <p></p>
-                    <p></p>
+                    <br><br>
                     Øvelse: Diskuter videoerne i grupper eller i plenum. Hvad er fordele og ulemper ved surveillance capitalism og hvordan vil vi hver især bruge vores rettigheder?</p>
-                </div>
-                </div>
             </div>
-
-        </div>
         <script src="script.js"></script>
     </body>
 </html>
